update borrowings page for admin

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 
 # dependencies
 /node_modules
-/library-backend/node_modules
-/library-backend/.env
+/backend/node_modules
+/backend/.env
 /.pnp
 .pnp.*
 .yarn/*
