--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "library-backend",
+  "name": "permin-backend",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start": "node dist/index.js",
     "seed": "ts-node src/supabase/seed.ts"
   },
   "keywords": [],
